5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1613_1804.log
== SUBMITION (2019-04-04 03:56:29) 
-- CODE:
XA=float(input("digite XA:   "))
YA=float(input("digite YA:   "))
XB=float(input("digite XB:   "))
YB=float(input("digite YB:   "))
DAB=sqrt((XB-XA)**2+(YB-YA)**2)
print(round(DAB,3))
-- EXECUTION TIME:
0.129399
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1804/main.py", line 5, in <module>
    DAB=sqrt((XB-XA)**2+(YB-YA)**2)
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 03:58:24) 
-- CODE:
XA=float(input("digite XA:   "))
YA=float(input("digite YA:   "))
XB=float(input("digite XB:   "))
YB=float(input("digite YB:   "))
DAB=sqrt(((XB-XA)**2)+(YB-YA)**2)
print(round(DAB,3))
-- EXECUTION TIME:
0.170093
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1804/main.py", line 5, in <module>
    DAB=sqrt(((XB-XA)**2)+(YB-YA)**2)
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 04:00:00) 
-- CODE:
XA=int(input("digite XA:   "))
YA=int(input("digite YA:   "))
XB=int(input("digite XB:   "))
YB=int(input("digite YB:   "))
DAB=sqrt((XB-XA)**2+(YB-YA)**2)
print(round(DAB,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    DAB=sqrt((XB-XA)**2+(YB-YA)**2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 04:00:03) 
-- CODE:
XA=int(input("digite XA:   "))
YA=int(input("digite YA:   "))
XB=int(input("digite XB:   "))
YB=int(input("digite YB:   "))
DAB=sqrt((XB-XA)**2+(YB-YA)**2)
print(round(DAB,3))
-- EXECUTION TIME:
0.116904
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1804/main.py", line 5, in <module>
    DAB=sqrt((XB-XA)**2+(YB-YA)**2)
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 04:02:30) 
-- CODE:
from <math> import *
XA=float(input("digite XA:   "))
YA=float(input("digite YA:   "))
XB=float(input("digite XB:   "))
YB=float(input("digite YB:   "))
DAB=sqrt((XB-XA)**2+(YB-YA)**2)
print(round(DAB,3))
-- EXECUTION TIME:
0.255997
-- ERROR:
  File "/home/codebench/codes/1613/1804/main.py", line 1
    from <math> import *
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 04:02:43) 
-- CODE:
from <math> import *
XA=float(input("digite XA:   "))
YA=float(input("digite YA:   "))
XB=float(input("digite XB:   "))
YB=float(input("digite YB:   "))
DAB=sqrt((XB-XA)**2+(YB-YA)**2)
print(round(DAB,3))
-- ERROR:
File "XXXX", line 1
    from <math> import *
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 04:03:07) 
-- CODE:
from <math> import *
XA=float(input("digite XA:   "))
YA=float(input("digite YA:   "))
XB=float(input("digite XB:   "))
YB=float(input("digite YB:   "))
DAB=sqrt((XB-XA)**2+(YB-YA)**2)
print(round(DAB,3))
-- ERROR:
File "XXXX", line 1
    from <math> import *
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 04:03:33) 
-- CODE:
from <math> import
XA=float(input("digite XA:   "))
YA=float(input("digite YA:   "))
XB=float(input("digite XB:   "))
YB=float(input("digite YB:   "))
DAB=sqrt((XB-XA)**2+(YB-YA)**2)
print(round(DAB,3))
-- ERROR:
File "XXXX", line 1
    from <math> import
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 04:04:18) 
-- CODE:
from<math>import
XA=float(input("digite XA:   "))
YA=float(input("digite YA:   "))
XB=float(input("digite XB:   "))
YB=float(input("digite YB:   "))
DAB=sqrt((XB-XA)**2+(YB-YA)**2)
print(round(DAB,3))
-- ERROR:
File "XXXX", line 1
    from<math>import
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 04:04:46) 
-- CODE:
from<math>import*
XA=float(input("digite XA:   "))
YA=float(input("digite YA:   "))
XB=float(input("digite XB:   "))
YB=float(input("digite YB:   "))
DAB=sqrt((XB-XA)**2+(YB-YA)**2)
print(round(DAB,3))
-- ERROR:
File "XXXX", line 1
    from<math>import*
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 04:08:12) 
-- CODE:
from math import*
XA=float(input("digite XA:   "))
YA=float(input("digite YA:   "))
XB=float(input("digite XB:   "))
YB=float(input("digite YB:   "))
DAB=sqrt((XB-XA)**2+(YB-YA)**2)
print(round(DAB,3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 04:10:45) 
-- CODE:
from math import*
XA=float(input("digite XA:   "))
YA=float(input("digite YA:   "))
XB=float(input("digite XB:   "))
YB=float(input("digite YB:   "))
DAB=(XB-XA)**2+(YB-YA)**2
print(round(sqrt(DAB),3))
-- EXECUTION TIME:
0.222678
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:23:44) 
-- CODE:
from math import*
XA=float(input("digite XA:   "))
YA=float(input("digite YA:   "))
XB=float(input("digite XB:   "))
YB=float(input("digite YB:   "))
DAB=sqrt((XB-XA)**2+(YB-YA)**2)
print(round(DAB,3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:23:45) 
-- CODE:
from math import*
XA=float(input("digite XA:   "))
YA=float(input("digite YA:   "))
XB=float(input("digite XB:   "))
YB=float(input("digite YB:   "))
DAB=sqrt((XB-XA)**2+(YB-YA)**2)
print(round(DAB,3))
-- EXECUTION TIME:
0.22656
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
